# exo-mlir

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  Snakefile  acc_matmul.py  config.yaml  exo.out  pyproject.toml  setup.sh  test.mlir
.zed/: settings.json
benchmarks/: benchmark.c  benchmark.cc  benchmark.h  entrypoint.cpp  nanotime.h  sgemm.py
benchmarks-new/level1/: dsdot.py  exo_copy.py  scal.py  swap.py
benchmarks-new/level2/: ger.py
benchmarks-new/level3/: mscal.py  syr2k.py
benchmarks/common/: sgemm.mlir
benchmarks/level0/: asum.correctness.cpp  asum.harness.cpp  asum.py  axpy.correctness.cpp  axpy.harness.cpp  axpy.py  dot.correctness.cpp  dot.harness.cpp  dot.py  exo_copy.correctness.cpp  exo_copy.harness.cpp  rot.correctness.cpp  rot.harness.cpp  scal.correctness.cpp  scal.harness.cpp  scal.py  swap.correctness.cpp  swap.harness.cpp
benchmarks/level1/: asum.correctness.cpp  asum.harness.cpp  asum.py  axpy.correctness.cpp  axpy.harness.cpp  axpy.py  dot.correctness.cpp  dot.harness.cpp  dot.py  exo_copy.correctness.cpp  exo_copy.harness.cpp  exo_copy.py  rot.correctness.cpp  rot.harness.cpp  rot.py  rotm.py  scal.correctness.cpp  scal.harness.cpp  scal.py  swap.correctness.cpp  swap.harness.cpp  swap.py
benchmarks/level1-unopt/: asum.correctness.cpp  asum.harness.cpp  axpy.correctness.cpp  axpy.harness.cpp  dot.correctness.cpp  dot.harness.cpp  exo_copy.correctness.cpp  exo_copy.harness.cpp  exo_copy.py  rot.correctness.cpp  rot.harness.cpp  rot.py  scal.correctness.cpp  scal.harness.cpp  swap.correctness.cpp  swap.harness.cpp  swap.py
benchmarks/level2/: asum.correctness.cpp  asum.harness.cpp  axpy.correctness.cpp  axpy.harness.cpp  dot.correctness.cpp  dot.harness.cpp  dot.py  exo_copy.correctness.cpp  exo_copy.harness.cpp  gemm.py  gemv.py  mscal.py  rot.correctness.cpp  rot.harness.cpp  rot.py  scal.correctness.cpp  scal.harness.cpp  swap.correctness.cpp  swap.harness.cpp  swap.py  symm.py  symv.py  syr.py  syr2.py  syr2k.py  syrk.py  trmm.py  trmv.py  trsv.py
benchmarks/level3/: gemm.py  symm.py  syrk.py
benchmarks/matmul/: accumulator.py  base.py  exocc.c  exomlir.c  main.c  neon.py
benchmarks/scalar/: conv1d.correctness.cpp  conv1d.harness.cpp  conv1d.py  gemm.correctness.cpp  gemm.harness.cpp  gemm.py
example/: acc_matmul.c  acc_matmul.h
exoblas/perf_features/: asum.json
exoblas/src/exoblas/: cblas_enums.py  codegen_helpers.py  inspection.py  stdlib.py
listings/: add_one.c  add_one.mlir  add_one.py  matmul.mlir  take_slice.py
results/data/level1/: asum.processed.csv  axpy.processed.csv  dot.processed.csv  exo_copy.processed.csv  rot.processed.csv  swap.processed.csv
results/data/level1-unopt/: asum.processed.csv  axpy.processed.csv  dot.processed.csv  exo_copy.processed.csv  rot.processed.csv  swap.processed.csv
results/data/scalar/: conv1d.processed.csv  gemm.processed.csv
src/exomlir/: compiler.py  generator.py  main.py
src/exomlir/dialects/: exo.py  index.py  llvm_intrinsics.py
src/exomlir/rewrites/: add_prefix.py  convert_memref_to_llvm.py  convert_scalar_ref.py  convert_tensor_ref.py  (+8 more)
temp/: accumulator.ll  accumulator.mlir  accumulator2.mlir  avx2.ll  avx2.mlir  avx512.ll  avx512.mlir
temp/accumulator/: accumulator.c  accumulator.h
tests/: test_indexing.py  test_ir_generation.py
tests/filecheck/: binary_noop.py  fixed_matmul.py  lit.cfg  preserves_args.py  unary_noop.py
tests/procedures/: test_conv1d.py  test_dynamic_matmul.py  test_fixed_matmul.py
tools/: count-instructions.py  plot-benchmark-results.py  plot-heatmaps.py  plot-instruction-counts.py  process-results.py
(+7 files in other folders)
