[project]
name = "exo-mlir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "argparse>=1.4.0",
    "exo-lang==1.0.0",
    "pulp<2.8",
    "snakemake>=9.3.3",
    "xdsl",
]
scripts = { exo-mlir = "exomlir.main:main" }

[project.optional-dependencies]
exoblas = ["exoblas"]

[dependency-groups]
dev = ["filecheck>=1.0.1", "lit>=18.1.8", "pytest>=8.3.4"]

[tool.uv]
package = true

[tool.uv.sources]
xdsl = { git = "https://github.com/kaylendog/xdsl", rev = "2be0fb683891d9ddd73d817a201711128c30e085" }
exoblas = { workspace = true }

[tool.uv.workspace]
members = ["./vendor/ExoBLAS"]
